--- a/public/assets/css/8184c082007826aa.css
+++ b/public/assets/css/8184c082007826aa.css
@@ -13,7 +13,7 @@
     --tw-content: ""
 }
 
-/* html {
+html {
     line-height: 1.5;
     -webkit-text-size-adjust: 100%;
     -moz-tab-size: 4;
@@ -22,7 +22,7 @@
     font-family: var(--font-jakarta-sans), ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     font-feature-settings: normal;
     font-variation-settings: normal
-} */
+}
 
 body {
     margin: 0;
@@ -4180,8 +4180,7 @@ video {
 }
 
 .font-sans {
-    font-family: 'Plus Jakarta Sans', sans-serif
-    /* font-family: var(--font-jakarta-sans), ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" */
+    font-family: var(--font-jakarta-sans), ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"
 }
 
 .\!text-\[24px\] {
@@ -29032,7 +29031,7 @@ not all and (min-resolution:0.001dpcm) {
     font-style: normal;
     font-weight: 200 800;
     font-display: swap;
-    src: url(/_next/static/media/eed6db14ac3b93a0-s.woff) format("woff");
+    src: url(/_next/static/media/eed6db14ac3b93a0-s.woff2) format("woff2");
     unicode-range: u+0460-052f, u+1c80-1c88, u+20b4, u+2de0-2dff, u+a640-a69f, u+fe2e-fe2f
 }
 
@@ -29041,7 +29040,7 @@ not all and (min-resolution:0.001dpcm) {
     font-style: normal;
     font-weight: 200 800;
     font-display: swap;
-    src: url(/_next/static/media/65053818c3abcf97-s.woff) format("woff");
+    src: url(/_next/static/media/65053818c3abcf97-s.woff2) format("woff2");
     unicode-range: u+0102-0103, u+0110-0111, u+0128-0129, u+0168-0169, u+01a0-01a1, u+01af-01b0, u+0300-0301, u+0303-0304, u+0308-0309, u+0323, u+0329, u+1ea0-1ef9, u+20ab
 }
 
@@ -29050,7 +29049,7 @@ not all and (min-resolution:0.001dpcm) {
     font-style: normal;
     font-weight: 200 800;
     font-display: swap;
-    src: url(/_next/static/media/034043092db1e233-s.woff) format("woff");
+    src: url(/_next/static/media/034043092db1e233-s.woff2) format("woff2");
     unicode-range: u+0100-02af, u+0304, u+0308, u+0329, u+1e00-1e9f, u+1ef2-1eff, u+2020, u+20a0-20ab, u+20ad-20c0, u+2113, u+2c60-2c7f, u+a720-a7ff
 }
 
@@ -29059,7 +29058,7 @@ not all and (min-resolution:0.001dpcm) {
     font-style: normal;
     font-weight: 200 800;
     font-display: swap;
-    src: url(/_next/static/media/2b3f1035ed87a788-s.p.woff) format("woff");
+    src: url(/_next/static/media/2b3f1035ed87a788-s.p.woff2) format("woff2");
     unicode-range: u+00??, u+0131, u+0152-0153, u+02bb-02bc, u+02c6, u+02da, u+02dc, u+0304, u+0308, u+0329, u+2000-206f, u+2074, u+20ac, u+2122, u+2191, u+2193, u+2212, u+2215, u+feff, u+fffd
 }
 
@@ -29074,7 +29073,7 @@ not all and (min-resolution:0.001dpcm) {
 
 .__className_e3c363 {
     font-family: __Plus_Jakarta_Sans_e3c363, __Plus_Jakarta_Sans_Fallback_e3c363;
-    font-style: normal;
+    font-style: normal
 }
 
 .__variable_e3c363 {
