--- a/public/assets/css/fonts.css
+++ b/public/assets/css/fonts.css
@@ -1,9 +1,8 @@
-body {
+/* body {
   font-family: 'Plus Jakarta Sans', sans-serif;
-  /* font-family: var(--font-jakarta-sans); */
-}
+} */
 
-/* html {
+html {
     line-height: 1.5;
     -webkit-text-size-adjust: 100%;
     -moz-tab-size: 4;
@@ -12,9 +11,7 @@ body {
     font-family: var(--font-jakarta-sans), ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     font-feature-settings: normal;
     font-variation-settings: normal
-} */
-
-
+}
 /* body {
   font-family: 'Material Symbols Outlined';
   font-weight: 550;
