--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+.button-animation {
+    @apply transform transition hover:cursor-pointer hover:scale-90 duration-700 ease-in-out
+}
+
 
 [x-cloak] {
     display: none;
