--- a/assets/css/8184c082007826aa.css
+++ b/assets/css/8184c082007826aa.css
@@ -4180,6 +4180,7 @@ video {
 }
 
 .font-sans {
+    /* font-family: "Plus Jakarta Sans", sans-serif !important; */
     font-family: "Montserrat", sans-serif;
     /* font-family: var(--font-jakarta-sans), ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" */
 }
