--- a/assets/css/fonts.css
+++ b/assets/css/fonts.css
@@ -1,8 +1,4 @@
-/* body {
-  font-family: 'Plus Jakarta Sans', sans-serif;
-} */
-
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900');
 
 
 @font-face {
@@ -57,7 +53,7 @@ html {
   tab-size: 4;
   font-family: "Montserrat", sans-serif;
   font-optical-sizing: auto;
-  /* font-family: var(--font-jakarta-sans), ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; */
   font-feature-settings: normal;
   font-variation-settings: normal;
+  font-weight: 300;
 }
