--- a/assets/css/fonts.css
+++ b/assets/css/fonts.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900');
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000');
 
 
 @font-face {
@@ -65,7 +66,8 @@ html {
   -moz-tab-size: 4;
   -o-tab-size: 4;
   tab-size: 4;
-  font-family: "Montserrat", sans-serif;
+  /* font-family: "Nunito Sans", sans-serif; */
+  /* font-family: "Montserrat", sans-serif; */
   font-optical-sizing: auto;
   font-feature-settings: normal;
   font-variation-settings: normal;
