--- a/assets/css/8184c082007826aa.css
+++ b/assets/css/8184c082007826aa.css
@@ -343,7 +343,7 @@ video {
     width: 100%;
     margin-right: auto;
     margin-left: auto;
-    max-width: 90vw;
+    max-width: 87vw !important;
 }
 
 @media (min-width:100%) {
