--- a/assets/css/fonts.css
+++ b/assets/css/fonts.css
@@ -1,6 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900');
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000');
-
 
 @font-face {
   font-family: "Material Symbols Outlined";
@@ -23,42 +21,6 @@
   direction: ltr;
   font-feature-settings: "liga";
 }
-@font-face {
-  font-family: "Material Symbols Outlined";
-  font-style: normal;
-  font-weight: 400;
-  src: url(https://fonts.gstatic.com/s/materialsymbolsoutlined/v203/kJF1BvYX7BgnkSrUwT8OhrdQw4oELdPIeeII9v6oDMzByHX9rA6RzaxHMPdY43zj-jCxv3fzvRNU22ZXGJpEpjC_1v-p_4MrImHCIJIZrDCvHOelbd5zrDAt.woff)
-    format("woff");
-}
-.material-symbols-outlined {
-  font-family: "Material Symbols Outlined";
-  font-weight: normal;
-  font-style: normal;
-  font-size: 24px;
-  line-height: 1;
-  letter-spacing: normal;
-  text-transform: none;
-  display: inline-block;
-  white-space: nowrap;
-  word-wrap: normal;
-  direction: ltr;
-  -webkit-font-feature-settings: "liga";
-  -webkit-font-smoothing: antialiased;
-}
-
-/* html {
-  line-height: 1.5;
-  -webkit-text-size-adjust: 100%;
-  -moz-tab-size: 4;
-  -o-tab-size: 4;
-  tab-size: 4;
-  font-family: "Montserrat", sans-serif;
-  font-optical-sizing: auto;
-  font-feature-settings: normal;
-  font-variation-settings: normal;
-  font-weight: 300;
-} */
-
 
 html {
   line-height: 1.5;
@@ -66,44 +28,39 @@ html {
   -moz-tab-size: 4;
   -o-tab-size: 4;
   tab-size: 4;
-  /* font-family: "Nunito Sans", sans-serif; */
-  /* font-family: "Montserrat", sans-serif; */
   font-optical-sizing: auto;
   font-feature-settings: normal;
   font-variation-settings: normal;
   font-weight: 400;
-  color: #333; /* Set a default text color */
-  background-color: #f9f9f9; /* Set a light background color */
+  color: #333; 
+  background-color: #f9f9f9;
 }
 
 body {
   margin: 0;
   padding: 0;
-  font-size: 14px; /* Set a base font size */
-  line-height: 1.6; /* Slightly increase line height for better readability */
+  font-size: 14px; 
+  line-height: 1.6;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Montserrat", sans-serif;
-  font-weight: 700; /* Use a bolder weight for headings */
+  font-family: "Nunito Sans", sans-serif;
+  font-weight: 700;
   margin-top: 0;
   margin-bottom: 0.5em;
-  color: #222; /* Darker color for headings */
+  color: #222;
 }
 
 p {
   margin-top: 0;
   margin-bottom: 1em;
-  font-weight: 400; /* Normal weight for paragraphs */
+  font-weight: 400;
 }
-
-
 
 blockquote {
   margin: 1em 0;
   padding: 0.5em 1em;
   border-left: 4px solid #ccc;
-  /* background-color: #f9f9f9; */
   font-style: italic;
   color: #555;
 }
@@ -122,7 +79,6 @@ pre {
   border-radius: 4px;
   overflow-x: auto;
 }
-
 
 .container {
   max-width: 1200px;
