--- a/assets/css/8184c082007826aa.css
+++ b/assets/css/8184c082007826aa.css
@@ -4181,9 +4181,8 @@ video {
 }
 
 .font-sans {
-    font-family: "Nunito Sans", sans-serif !important;
-    /* font-family: "Montserrat", sans-serif; */
-    /* font-family: var(--font-jakarta-sans), ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" */
+    /* font-family: "Nunito Sans", sans-serif !important; */
+    font-family: "Montserrat", sans-serif;
 }
 
 .\!text-\[24px\] {
