--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,6 +8,10 @@
   }
 }
 
+.font-sans {
+  font-family: "Lato", serif !important;
+}
+
 .image-style {
   position: absolute;
   height: 100%;
@@ -23,25 +27,43 @@
 .section-heading {
   @apply tracking-normal text-3xl text-black font-semibold leading-tight capitalize
 }
+.section-heading {
+  font-family: "Lato", serif !important;
+}
 
 .card-heading {
   @apply tracking-normal text-lg text-black  font-semibold leading-normal capitalize
 }
+.card-heading {
+  font-family: "Lato", serif !important;
+}
 
 .content{
-  @apply tracking-normal text-[15px] text-gray-800 font-normal leading-normal  
+  @apply tracking-normal text-[16px] text-black !font-sans 
+}
+.content{
+  font-family: "Lato", serif !important;
 }
 
 .small-text {
   @apply tracking-normal text-xs text-black font-normal leading-normal
 }
+.small-text {
+  font-family: "Lato", serif !important;
+}
 
 .bannerHeading{
   @apply tracking-normal text-4xl text-black font-semibold leading-normal capitalize
 }
+.bannerHeading{
+  font-family: "Lato", serif !important;
+}
 
 .bannerDescription{
   @apply tracking-normal text-xl text-black font-semibold leading-normal capitalize
+}
+.bannerDescription{
+  font-family: "Lato", serif !important;
 }
 
 
